--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -19,11 +19,11 @@
           <div class="row mb-3">
             <div class="col">
               
-              <input type="text" class="form-control" name="fname" [(ngModel)]="profileObject.fname" #fname="ngModel" pattern="^[A-Za-z]+$" maxlength="20" id="exampleInputName" aria-describedby="fnameHelp" placeholder="Enter First Name" required>
+              <input type="text" class="form-control" name="fname" ngModel #fname="ngModel" pattern="^[A-Za-z]+$" maxlength="20" id="exampleInputName" aria-describedby="fnameHelp" placeholder="Enter First Name" required>
               <small class="errors" *ngIf="fname.invalid && (fname.dirty || fname.touched)">* Enter First Name</small>
             </div>
             <div class="col">
-              <input type="text" class="form-control" name="lname" [(ngModel)]="profileObject.lname"#lname="ngModel" pattern="^[A-Za-z]+$" maxlength="20" id="exampleInputName" aria-describedby="lnameHelp" placeholder="Enter Last Name" required>
+              <input type="text" class="form-control" name="lname" ngModel #lname="ngModel" pattern="^[A-Za-z]+$" maxlength="20" id="exampleInputName" aria-describedby="lnameHelp" placeholder="Enter Last Name" required>
               <small class="errors" *ngIf="lname.invalid && (lname.dirty || lname.touched)">* Enter Last Name</small>
             </div>
           </div>
@@ -37,7 +37,7 @@
 
           <div class="row mb-3">
             <div class="col">
-              <input type="text" class="form-control" name="phone" [(ngModel)]="profileObject.phone" #phone="ngModel" maxlength="10" pattern="^[789]\d{9}$" maxlength="10" placeholder="Phone Number" id="inputPhone" aria-describedby="phoneHelp" required >
+              <input type="text" class="form-control" name="phone" ngModel #phone="ngModel" maxlength="10" pattern="^[789]\d{9}$" maxlength="10" placeholder="Phone Number" id="inputPhone" aria-describedby="phoneHelp" required >
               <small class="errors" *ngIf="phone.invalid && (phone.dirty || phone.touched)">* Enter the correct mobile number</small>
             </div>
           </div>
@@ -45,14 +45,14 @@
           <div class="row mb-3">
             <div class="col">
               <label for="customRange" class="form-label">Age</label>
-              <input type="range" class="form-range form-control" name="age" [(ngModel)]="profileObject.age" #age="ngModel" min="20" max="80" id="customRange" required>
+              <input type="range" class="form-range form-control" name="age" ngModel #age="ngModel" min="20" max="80" id="customRange" required>
               <small class="errors" *ngIf="age.invalid && (age.dirty || age.touched)">* Select Age</small>
             </div>
           </div>
 
           <div class="row mb-3">
             <div class="col">
-              <select class="form-select form-control" name="state" [(ngModel)]="profileObject.state" #state="ngModel" aria-label="Default select example" aria-describedby="stateHelp" required>
+              <select class="form-select form-control" name="state" ngModel #state="ngModel" aria-label="Default select example" aria-describedby="stateHelp" required>
                 <option selected>State</option>
                 <option value="Assam">Assam</option>
                 <option value="Bihar">Bihar</option>
@@ -66,7 +66,7 @@
 
           <div class="row mb-3">
             <div class="col">
-              <select class="form-select form-control" name="Country" [(ngModel)]="profileObject.Country" #Country="ngModel" aria-label="Default select example" aria-describedby="CountryHelp" required>
+              <select class="form-select form-control" name="Country" ngModel #Country="ngModel" aria-label="Default select example" aria-describedby="CountryHelp" required>
                 <option selected>Country</option>
                 <option value="America">America</option>
                 <option value="Canada">Canada</option>
@@ -81,14 +81,14 @@
 
           <div class="row mb-3">
             <div class="col">
-                <input type="text" class="form-control" name="address" [(ngModel)]="profileObject.address" #address="ngModel" placeholder="Address" id="inputAddress" aria-describedby="addressHelp" required>
+                <input type="text" class="form-control" name="address" ngModel #address="ngModel" placeholder="Address" id="inputAddress" aria-describedby="addressHelp" required>
                 <small class="errors" *ngIf="address.invalid && (address.dirty || address.touched)">* Enter your Address</small>
               </div>
           </div>
 
           <div class="row mb-3">
             <div class="col">
-              <input type="text" class="form-control" name="tags" [(ngModel)]="profileObject.tags" #tags="ngModel" placeholder="Tags" id="inputTags" aria-describedby="tagsHelp" required>
+              <input type="text" class="form-control" name="tags" ngModel #tags="ngModel" placeholder="Tags" id="inputTags" aria-describedby="tagsHelp" required>
               <small class="errors" *ngIf="tags.invalid && (tags.dirty || tags.touched)">* Enter Your Hobbies</small>
             </div>
           </div>
